--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/btnProfile"
+                android:id="@+id/tvProfile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Profile"
@@ -51,7 +51,7 @@
                 android:layout_weight="1"/>
 
             <TextView
-                android:id="@+id/btnGallery"
+                android:id="@+id/tvGallery"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Gallery"
@@ -63,10 +63,10 @@
                 android:layout_weight="1"/>
 
             <TextView
-                android:id="@+id/btnInfo"
+                android:id="@+id/tvMplayer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Info"
+                android:text="Mplayer"
                 android:textSize="20sp"/>
 
         </LinearLayout>
