--- a/app/src/main/res/layout/mplayer.xml
+++ b/app/src/main/res/layout/mplayer.xml
@@ -9,16 +9,35 @@
         android:layout_height="0dp"
         android:layout_weight="0.6"
         android:orientation="vertical">
-        <ImageView
-            android:id="@+id/imgThumbnail"
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:src="@drawable/mov01"/>
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgThumbnail"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/mov01"/>
+
+            <TextView
+                android:paddingTop="15dp"
+                android:id="@+id/tvMusicInfo"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:textSize="20sp"
+                android:text="Loading"/>
+        </LinearLayout>
 
         <ListView
             android:id="@+id/lvMusicList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
 
     </LinearLayout>
 
@@ -114,21 +133,21 @@
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
-                <Button
+                <CheckBox
                     android:id="@+id/btnRepeat"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="반복"/>
 
-                <Button
+                <CheckBox
                     android:id="@+id/btnShuffle"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="셔플"/>
 
-                <Button
+                <CheckBox
                     android:id="@+id/btnNone"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
